<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Orientation">
    <View
        android:id="@+id/anchor_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/my_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="64sp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:padding="4dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/menu2"
            android:contentDescription="@string/menu"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="180dp"
            android:layout_gravity="center_vertical"
            android:text="@string/Profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:contentDescription="@string/profile_description" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/greyblue"
            android:text="@string/name"
            android:textColor="@color/black"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/my_linear_layout"
        android:backgroundTint="@color/black"
        android:src="@drawable/profile_1"
        android:contentDescription="@string/loco" />
    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="380dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_below="@id/profile_image"
        android:layout_marginTop="26dp"
        android:hint="@string/save"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />


    <RelativeLayout
        android:id="@+id/container_dob"
        android:layout_width="390sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp">
        <ImageView
            android:id="@+id/calendar_image"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/computer_icons_calendar_date_others_thumbnail__1_"
            android:importantForAccessibility="no" />
        <TextView
            android:id="@+id/textview_dob"
            android:layout_width="199dp"
            android:layout_height="45dp"
            android:layout_toEndOf="@id/calendar_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/DOB"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/container_country"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_dob"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp">
        <ImageView
            android:id="@+id/country_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/country"
            android:importantForAccessibility="no" />
        <TextView
            android:id="@+id/textview_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/country_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/cou"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/container_gender"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_country"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp">
        <ImageView
            android:id="@+id/gender_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_gender"
            android:importantForAccessibility="no" />
        <TextView
            android:id="@+id/textview_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/gender_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical" />
    </RelativeLayout>


</RelativeLayout>
